chore: hyprland config

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,89 +1,75 @@
-source = ~/.config/Ax-Shell/config/hypr/colors.conf
-
-# BACKGROUND
 background {
     monitor =
-    path = ~/.current.wall #path to background image
-    blur_passes = 3
-    blur_size = 3
-    contrast = 1.0
-    brightness = 0.5
-    vibrancy = 0.0
-    vibrancy_darkness = 0.0
+    path = ~/.config/assets/backgrounds/cat_leaves_blurred.png # only png supported for now
 }
 
-# GENERAL
-general {
-    grace = 0
-    hide_cursor = true
-}
-
-# INPUT FIELD
 input-field {
     monitor =
-    size = 256, 48
-    outline_thickness = 0
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.5 # Scale of dots' absolute size, 0.0 - 1.0
+    size = 200, 50
+    outline_thickness = 3
+    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    outer_color = rgba(00000000)
-    inner_color = rgba(0, 0, 0, 1)
-    font_color = rgb($foreground)
-    fail_color = rgb($error)
-    check_color = rgb($tertiary)
-    capslock_color = rgb($secondary)
-    fade_on_empty = false
-    font_family = Iosevka Nerd Font
-    placeholder_text = ... #text for input password
+    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
+    outer_color = rgb(a6adc8)
+    inner_color = rgb(11111b)
+    font_color = rgb(a6adc8)
+    fade_on_empty = true
+    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
+    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
-    position = 0, -100
+    rounding = -1 # -1 means complete rounding (circle/oval)
+    check_color = rgb(204, 136, 34)
+    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
+    fail_transition = 100 # transition time in ms between normal outer_color and fail_color
+    capslock_color = -1
+    numlock_color = -1
+    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
+    invert_numlock = false # change color if numlock is off
+    swap_font_color = false # see below
+    position = 0, -20
     halign = center
     valign = center
-    shadow_passes = 1
-    shadow_size = 5
-    shadow_boost = 0.5
 }
 
-# TIME
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +"%H:%M:%S")"
-    color = rgb($foreground)
-    font_size = 14
-    font_family = Iosevka Nerd Font Bold
-    position = 0, -150
-    halign = center
-    valign = center
-    shadow_passes = 1
-    shadow_size = 5
-    shadow_boost = 0.5
+    text = cmd[update:1000] echo "$TIME"
+    color = rgba(a6adc8)
+    font_size = 55
+    font_family = Fira Semibold
+    position = -100, 40
+    halign = right
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
 }
 
-# USER
 label {
     monitor =
-    text = cmd[update:1000] echo "$USER@$(hostname)"
-    color = rgb($foreground)
-    font_size = 14
-    font_family = Iosevka Nerd Font Bold Italic
-    position = 0, -50
-    halign = center
-    valign = center
-    shadow_passes = 1
-    shadow_size = 5
-    shadow_boost = 0.5
+    text                = cmd[update:1000] bash -c 'day=$(date +%d); case "$day" in 1) suffix="st";; 2) suffix="nd";; 3) suffix="rd";; *) suffix="th";; esac; echo -e "$(date +"%B %e")'$day'$suffix, $(date +%Y)"'
+    color = rgba(a6adc8)
+    font_size = 20
+    font_family = Fira Semibold
+    position = -100, 160
+    halign = right
+    valign = bottom
+    shadow_passes = 5
+    shadow_size = 10
 }
 
-# PICTURE
 image {
-  path = .face.icon
-  size = 200
-  position = 0, 75
-  halign = center
-  valign = center
-  border_size = 3
-  border_color = rgb($primary)
-  shadow_passes = 1
-  shadow_size = 5
-  shadow_boost = 0.5
+    monitor =
+    path = ~/.config/assets/backgrounds/cat_pacman.png
+    size = 280 # lesser side if not 1:1 ratio
+    rounding = -1 # negative values mean circle
+    border_size = 4
+    border_color = rgb(a6adc8)
+    rotate = 0 # degrees, counter-clockwise
+    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
+#    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
+    position = 0, 200
+    halign = center
+    valign = center
 }
