--- a/config/hypr/ax-shell.conf
+++ b/config/hypr/ax-shell.conf
@@ -36,14 +36,14 @@ layerrule = noanim, fabric
 
 exec = cp $wallpaper ~/.current.wall
 
-general {
-    col.active_border = rgb($primary)
-    col.inactive_border = rgb($surface)
-    gaps_in = 2
-    gaps_out = 4
-    border_size = 2
-    layout = dwindle
-}
+# general {
+#     col.active_border = rgb($primary)
+#     col.inactive_border = rgb($surface)
+#     gaps_in = 2
+#     gaps_out = 4
+#     border_size = 2
+#     layout = dwindle
+# }
 
 cursor {
   no_warps=true
@@ -67,11 +67,11 @@ decoration {
     }
 }
 
-animations {
-    enabled = yes
-    bezier = myBezier, 0.4, 0.0, 0.2, 1.0
-    animation = windows, 1, 2.5, myBezier, popin 80%
-    animation = border, 1, 2.5, myBezier
-    animation = fade, 1, 2.5, myBezier
-    animation = workspaces, 1, 2.5, myBezier, slidefade 20%
-}
+# animations {
+#     enabled = yes
+#     bezier = myBezier, 0.4, 0.0, 0.2, 1.0
+#     animation = windows, 1, 2.5, myBezier, popin 80%
+#     animation = border, 1, 2.5, myBezier
+#     animation = fade, 1, 2.5, myBezier
+#     animation = workspaces, 1, 2.5, myBezier, slidefade 20%
+# }
